--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@sendgrid/mail": "^8.1.4",
     "@tanstack/react-query": "^5.60.5",
+    "@types/puppeteer-core": "^5.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
